--- a/ReadMe.html
+++ b/ReadMe.html
@@ -86,7 +86,7 @@
              <label>Email <input type="email" name="email" placeholder="Email Address" required><br></label>
             <input type="hidden" name="_next" value="http://127.0.0.1:5500//ReadMe.html"><br> 
               <label>Message <textarea name="Message" placeholder="Your Message" required></textarea><br><br></label>
-              <button class="btn" type="submit">Send</button><br>
+              <button class="btn" type="submit">Send</button><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
          </form>
          <input type="button" value="Back" onclick="history.back()">
         
